# STM32_TFLM

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  STM32H747XIHx_FLASH_CM7.ld  startup_stm32h747xx.s  stm32h747cm7.svd
Drivers/: CMakeLists.txt
Inc/: board.h  main.h  stlogo.h  stm32h747i_discovery_conf.h  stm32h7xx_hal_conf.h
Src/: board.cpp  camera.cpp  lcd.c  main.c  main.cpp  stm32h7xx_it.c  system_stm32h7xx.c
